[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entity/Pip/Pip.gd" type="Script" id=1]
[ext_resource path="res://Entity/Pip/PipShadow.png" type="Texture" id=2]
[ext_resource path="res://Entity/Pip/Pip.png" type="Texture" id=3]
[ext_resource path="res://Entity/Capturable/Capturable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sound/Capture/PipCollect.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "hover"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, 2 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[node name="Pip" type="Node2D" groups=[
"pip",
]]
script = ExtResource( 1 )

[node name="Visual" type="Node2D" parent="."]
position = Vector2( 0, -2 )

[node name="Sprite" type="Sprite" parent="Visual"]
position = Vector2( 0, -10 )
texture = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.596078 )
texture = ExtResource( 2 )

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.3
anims/hover = SubResource( 1 )

[node name="Capturable" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Capturable"]
shape = SubResource( 2 )

[node name="CapturePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="captured" from="Capturable" to="." method="_on_Capturable_captured"]
[connection signal="finished" from="CapturePlayer" to="." method="_on_CapturePlayer_finished"]
